<resources>
    <string name="app_name">dissertation</string>
    <string name="title_ar">AR View</string>
    <string name="title_turn_tracker">Turn Tracker</string>
    <string name="title_library">Library</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_name_assigned">No Name Assigned</string>
    <string name="show_details">Details</string>
    <string name="highlight_character_in_augmented_reality_viewer">Highlight Character in Augmented Reality Viewer</string>
    <string name="settingsfragment">Settings</string>
    <string name="fragment_player_overview">You</string>
    <string name="add_turn_to_tracker">Add Turn to Tracker</string>
    <string name="next_turn">Next Turn</string>
    <string name="previous_turn">Previous Turn</string>
    <string name="next_round">Next Round</string>
    <string name="hide_controls">Hide Controls</string>

    <string name="room_players_format">%1\$d/%2\$d</string>
    <string name="room_code">Enter Room Code</string>
    <string name="room_name">Room Name</string>
</resources>